--- a/simv2.2/output.xhtml
+++ b/simv2.2/output.xhtml
@@ -5,19 +5,8 @@
 <body>
     <math xmlns="http://www.w3.org/1998/Math/MathML">
         <mrow>
-            <mi>RESULT</mi>
-            <mo>=</mo>
-            <mfenced open="[" close="]"><mtable>
-<mtr>
-<mtd>364,5353</mtd>
-<mtd>798,5126</mtd>
-</mtr>
-<mtr>
-<mtd>329,2363</mtd>
-<mtd>721,4917</mtd>
-</mtr>
-</mtable>
-            </mfenced>
+            <mi>RESULT:</mi>
+            <mo> ERROR (Матрица введена некорректно (число элементов в строке не совпадает))</mo>
         </mrow>
     </math>
 </body>
