application is working

--- a/simv2.2/output.xhtml
+++ b/simv2.2/output.xhtml
@@ -4,10 +4,34 @@
 </head>
 <body>
     <math xmlns="http://www.w3.org/1998/Math/MathML">
-        <mrow>
-            <mi>RESULT:</mi>
-            <mo> ERROR (Матрица введена некорректно (число элементов в строке не совпадает))</mo>
-        </mrow>
-    </math>
+        <mi>RESULT</mi>
+        <mo>=</mo>
+<mfenced open="[" close="]">
+<mtable columnalign="center"><mtr>
+<mtd>95,3947</mtd>
+<mtd>450,6293</mtd>
+<mtd>519,6800</mtd>
+<mtd>95,3947</mtd>
+</mtr>
+<mtr>
+<mtd>118,0898</mtd>
+<mtd>561,7795</mtd>
+<mtd>651,2000</mtd>
+<mtd>118,0898</mtd>
+</mtr>
+<mtr>
+<mtd>125,3643</mtd>
+<mtd>604,0473</mtd>
+<mtd>706,6376</mtd>
+<mtd>125,3643</mtd>
+</mtr>
+<mtr>
+<mtd>151,7070</mtd>
+<mtd>734,1429</mtd>
+<mtd>861,4579</mtd>
+<mtd>151,7070</mtd>
+</mtr>
+</mtable>
+</mfenced></math>
 </body>
 </html>
