--- a/output.xhtml
+++ b/output.xhtml
@@ -8,29 +8,65 @@
         <mo>=</mo>
 <mfenced open="[" close="]">
 <mtable columnalign="center"><mtr>
-<mtd>95,3947</mtd>
-<mtd>450,6293</mtd>
-<mtd>519,6800</mtd>
-<mtd>95,3947</mtd>
+<mfenced open="[" close="]">
+<mtable columnalign="center"><mtr>
+<mtd>26,0000</mtd>
+<mtd>28,0000</mtd>
 </mtr>
 <mtr>
-<mtd>118,0898</mtd>
-<mtd>561,7795</mtd>
-<mtd>651,2000</mtd>
-<mtd>118,0898</mtd>
+<mtd>30,0000</mtd>
+<mtd>32,0000</mtd>
 </mtr>
 <mtr>
-<mtd>125,3643</mtd>
-<mtd>604,0473</mtd>
-<mtd>706,6376</mtd>
-<mtd>125,3643</mtd>
+<mtd>34,0000</mtd>
+<mtd>36,0000</mtd>
+</mtr>
+</mtable>
+</mfenced><mfenced open="[" close="]">
+<mtable columnalign="center"><mtr>
+<mtd>64,0000</mtd>
+<mtd>68,0000</mtd>
 </mtr>
 <mtr>
-<mtd>151,7070</mtd>
-<mtd>734,1429</mtd>
-<mtd>861,4579</mtd>
-<mtd>151,7070</mtd>
+<mtd>72,0000</mtd>
+<mtd>76,0000</mtd>
 </mtr>
+<mtr>
+<mtd>80,0000</mtd>
+<mtd>84,0000</mtd>
+</mtr>
+</mtable>
+</mfenced></mtr>
+<mtr>
+<mfenced open="[" close="]">
+<mtable columnalign="center"><mtr>
+<mtd>114,0000</mtd>
+<mtd>120,0000</mtd>
+</mtr>
+<mtr>
+<mtd>126,0000</mtd>
+<mtd>132,0000</mtd>
+</mtr>
+<mtr>
+<mtd>138,0000</mtd>
+<mtd>144,0000</mtd>
+</mtr>
+</mtable>
+</mfenced><mfenced open="[" close="]">
+<mtable columnalign="center"><mtr>
+<mtd>176,0000</mtd>
+<mtd>184,0000</mtd>
+</mtr>
+<mtr>
+<mtd>192,0000</mtd>
+<mtd>200,0000</mtd>
+</mtr>
+<mtr>
+<mtd>208,0000</mtd>
+<mtd>216,0000</mtd>
+</mtr>
+</mtable>
+</mfenced></mtr>
 </mtable>
 </mfenced></math>
 </body>
